--- a/lab6-8/CMakeLists.txt
+++ b/lab6-8/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 3.22.0)
 project(OS_LAB LANGUAGES C)
 
-add_definitions("-DCMAKE_TOOLCHAIN_FILE=C:/Users/Ivanh/vcpkg/scripts/buildsystems/vcpkg.cmake")
-
 set(TREE_SOURCE src/tree.c)
 set(TREE_INCLUDE include/tree.h)
 add_library(
@@ -19,27 +17,21 @@ add_library(
         ${MSGQ_INCLUDE}
 )
 
-INCLUDE_DIRECTORIES(
-        C:/Users/Ivanh/vcpkg/installed/x86-windows/include/
-)
-find_package(ZeroMQ CONFIG REQUIRED)
-
-
 set(MAIN_HEADERS include/include.h)
 set(MAIN_SOURCE src/main.c)
-add_executable(OS_LAB ${MAIN_SOURCE} ${MAIN_HEADERS})
-target_link_libraries(OS_LAB PRIVATE lib_msgq libzmq libzmq-static)
+add_executable(os_lab ${MAIN_SOURCE} ${MAIN_HEADERS})
+target_link_libraries(os_lab PRIVATE lib_msgq libzmq.so)
 
 
 set(CHILD_HEADERS include/child.h)
 set(CHILD_SOURCE src/child.c)
-add_executable(CHILD ${CHILD_SOURCE} ${CHILD_HEADERS})
-target_link_libraries(CHILD PRIVATE lib_msgq libzmq libzmq-static)
+add_executable(child ${CHILD_SOURCE} ${CHILD_HEADERS})
+target_link_libraries(child PRIVATE lib_msgq libzmq.so)
 
 set(PARENT_HEADERS include/parent.h)
 set(PARENT_SOURCE src/parent.c)
-add_executable(PARENT ${PARENT_SOURCE} ${PARENT_HEADERS})
-target_link_libraries(PARENT PRIVATE lib_msgq libzmq libzmq-static)
+add_executable(parent ${PARENT_SOURCE} ${PARENT_HEADERS})
+target_link_libraries(parent PRIVATE lib_msgq libzmq.so)
 
 set(TEST_TREE_HEADERS include/test_tree.h)
 set(TEST_TREE_SOURCE src/test_tree.c)
@@ -48,5 +40,5 @@ target_link_libraries(test_tree PRIVATE lib_tree)
 
 set(ORCHESTRA_SOURCE src/orchestra.c)
 set(ORCHESTRA_INCLUDE include/orchestra.h include/tree.h)
-add_executable(ORCHESTRA ${ORCHESTRA_SOURCE} ${ORCHESTRA_HEADERS})
-target_link_libraries(ORCHESTRA PRIVATE lib_msgq lib_tree libzmq libzmq-static)
+add_executable(orchestra ${ORCHESTRA_SOURCE} ${ORCHESTRA_HEADERS})
+target_link_libraries(orchestra PRIVATE lib_msgq lib_tree libzmq.so)
